--- a/web/src/pages/home.css
+++ b/web/src/pages/home.css
@@ -3,6 +3,13 @@
     border-radius: 50%;
 }
 
+@media screen and (max-width: 350px) {
+    #lead-text-container {
+        animation: slide-color 5s infinite alternate;
+        border-radius: 0;
+    }
+}
+
 @keyframes slide-screen-color {
     0% {
         border-radius: 30% 70% 70% 30% / 30% 30% 70% 70% ;
@@ -16,6 +23,15 @@
     }
     100% {
         border-radius: 32% 68% 23% 77% / 70% 42% 58% 30%;
+        background-color: rgb(224, 214, 194);
+    }
+}
+
+@keyframes slide-color {
+    from {
+        background-color: rgb(217, 217, 243);
+    }
+    to {
         background-color: rgb(224, 214, 194);
     }
 }
