--- a/web/src/pages/team.css
+++ b/web/src/pages/team.css
@@ -10,6 +10,7 @@
     background-color: #f9f9f9;
     border: 1px solid #ddd;
     border-radius: 8px;
+    text-wrap: wrap;
     padding: 20px;
     text-align: center;
     transition: transform 0.3s, box-shadow 0.3s;
@@ -21,11 +22,10 @@
 } */
 
 .team-member img {
-    border-radius: 20%;
-    width: max-content;
-    height: max-content;
+    border-radius: 50%;
+    width: 150px;
     object-fit: cover;
-    margin-bottom: 10px;
+    margin-bottom: 18px;
 }
 
 .team-member h3 {
