--- a/web/src/components/footer.css
+++ b/web/src/components/footer.css
@@ -6,11 +6,11 @@ footer {
     justify-content: center;
     opacity: 0.8;
     margin-top: 100px;
-    padding: 18px 8px;
 }
 
 footer > div {
-    padding: 28px;
+    padding: 18px 8px;
+    /* padding: 28px; */
     border-radius: 18px;
     display: flex;
     flex-direction: column;
