--- a/web/src/pages/team.css
+++ b/web/src/pages/team.css
@@ -11,7 +11,10 @@
     border: 1px solid #ddd;
     border-radius: 8px;
     text-wrap: wrap;
-    padding: 20px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     text-align: center;
     transition: transform 0.3s, box-shadow 0.3s;
 }
@@ -30,6 +33,12 @@
 
 .team-member h3 {
     margin-bottom: 10px;
+    text-overflow: ellipsis;
+    line-clamp: 2;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    white-space: pre-line;
 }
 
 .social-links a {
