--- a/web/src/index.css
+++ b/web/src/index.css
@@ -2,13 +2,16 @@
 
 * {
   box-sizing: border-box;
+  user-select: none;
 }
 
-body, html {
+body,
+html {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+  scroll-behavior: smooth;
 }
 
 code {
@@ -16,14 +19,31 @@ code {
     monospace;
 }
 
-.fw-900 {font-weight: 900;}
-.fw-800 {font-weight: 800;}
-.fw-700 {font-weight: 700;}
-.fw-600 {font-weight: 600;}
-.fw-500 {font-weight: 500;}
-.fw-400 {font-weight: 400;}
+.fw-900 {
+  font-weight: 900;
+}
 
-main > div {
+.fw-800 {
+  font-weight: 800;
+}
+
+.fw-700 {
+  font-weight: 700;
+}
+
+.fw-600 {
+  font-weight: 600;
+}
+
+.fw-500 {
+  font-weight: 500;
+}
+
+.fw-400 {
+  font-weight: 400;
+}
+
+main>div {
   width: 100%;
   margin: 0;
 }
@@ -32,4 +52,15 @@ main > div {
   list-style-type: none;
   margin: 0;
   padding: 0;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+* {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
 }
