--- a/web/src/pages/team.css
+++ b/web/src/pages/team.css
@@ -1,9 +1,18 @@
-
 .team-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
+}
+
+.img-container {
+    display: flex;
+    justify-content: center;
+}
+
+.img-container > img {
+    /* border: 1px solid gray; */
+    transition: all 0.5s;
 }
 
 .team-member {
@@ -12,6 +21,7 @@
     border-radius: 8px;
     text-wrap: wrap;
     padding: 10px;
+    transition: all 0.3s;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -19,10 +29,23 @@
     transition: transform 0.3s, box-shadow 0.3s;
 }
 
-/* .team-member:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-} */
+.rainbow-hover {
+    /* background: linear-gradient(90deg, red, orange, yellow); */
+    transition: background 0.5s ease-in-out; /* Smooth transition on hover */
+    cursor: pointer;
+}
+
+.rainbow-hover:hover {
+    background: linear-gradient(90deg, white, rgb(186, 227, 240), rgb(230, 185, 185), white);
+
+    background-size: 400% 400%;
+    animation: rainbow-animation 10s infinite linear;
+}
+
+.team-member:hover .img-container > img {
+    /* border-color: black; */
+    border-radius: 8px;
+}
 
 .team-member img {
     border-radius: 50%;
